# documentation

./: 404.html  CNAME  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
docs/features/: core.md  craft.md
docs/js/: custom.js
docs/tutorial/: getting-started.md
features/core/: index.html
features/craft/: index.html
js/: termynal.js
search/: search_index.json
site/: 404.html  index.html
site/features/core/: index.html
site/js/: termynal.js
site/search/: search_index.json
tutorial/getting-started/: index.html
