[tool.poetry]
name = "Homestead Documentation"
version = "0.0.1"
description = "Documentation for Homestead https://github.com/orgs/HomesteadFramework/dashboard"
authors = ["Brandon Braner <brandon.braner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
